--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,7 @@
 /.myenv/z_log/
 /.myenv/.fl_files.txt
 /.myenv/.grep_result.txt
+/.myenv/gen_lu_sh/
+/.myenv/gen_lu_csh/
+/.myenv/gen_win_alias/
 /.myenv/script_a_secure/
