--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,11 @@ set -g visual-activity on
 
 # Automatically set window title
 setw -g automatic-rename
+
+# Vi mode for copy
+# Usage:	
+#	<prefix>+[	enter copy mode
+#	<prefix>+]	paste copied text
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
