update alias, other small update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,10 @@ set -g visual-activity on
 # Automatically set window title
 setw -g automatic-rename
 
+# misc settings
+mouse-select-pane
+mouse-select-window
+
 # Vi mode for copy
 # Usage:	
 #	<prefix>+[	enter copy mode
