--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,10 @@
-
+ 
 # change the prefix of defaut C-b
 #set-option -g prefix C-a
 
 # Key Binding
 unbind	%
 bind	|	split-window -h
-bind	\	split-window -h
 bind	-	split-window -v
 
 # Status bar
@@ -22,10 +21,6 @@ set -g visual-activity on
 # Automatically set window title
 setw -g automatic-rename
 
-# misc settings
-mouse-select-pane
-mouse-select-window
-
 # Vi mode for copy
 # Usage:	
 #	<prefix>+[	enter copy mode
@@ -33,3 +28,7 @@ mouse-select-window
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+
+# misc settings
+#mouse-select-pane
+#mouse-select-window
