add lu soft init notes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,9 @@
 #set-option -g prefix C-a
 
 # Key Binding
-unbind	%
-bind	|	split-window -h
-bind	-	split-window -v
+#unbind	%
+#bind	|	split-window -h
+#bind	-	split-window -v
 
 # Status bar
 set -g status-bg black
@@ -30,5 +30,6 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 # misc settings
+set -g default-terminal "screen-256color"
 #mouse-select-pane
 #mouse-select-window
