--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,6 @@
 #set-option -g prefix C-a
 
 # Key Binding
-#unbind	%
-#bind	|	split-window -h
-#bind	-	split-window -v
 
 # Status bar
 set -g status-bg black
@@ -21,15 +18,20 @@ set -g visual-activity on
 # Automatically set window title
 setw -g automatic-rename
 
-# Vi mode for copy
-# Usage:	
-#	<prefix>+[	enter copy mode
-#	<prefix>+]	paste copied text
+# Vi mode for copy: <prefix>+[ to enter copy mode, <prefix>+] to paste copied text
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 # misc settings
 set -g default-terminal "screen-256color"
-#mouse-select-pane
-#mouse-select-window
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+################################################################################
+# Deprecated
+################################################################################
+#unbind	%
+#bind	|	split-window -h
+#bind	-	split-window -v
