update gen_ paths

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,11 @@
 /.myenv/.grep_result.txt
 /.myenv/gVim.exe.stackdump
 /.myenv/bash.exe.stackdump
+/.vim/.netrwhist
+/.myenv/zgen/
+
+# IGNORE, to deprecate
 /.myenv/gen_log/
 /.myenv/gen_lu_sh/
 /.myenv/gen_lu_csh/
 /.myenv/gen_win_alias/
-/.vim/.netrwhist
