--- a/.gitignore
+++ b/.gitignore
@@ -40,13 +40,20 @@
 /.myenv/secure_*/
 
 # IGNORE, for those really not needed, or for secure reason
+/.myenv/zgen/
+/.myenv/conf/autokey/autokey.log
+/.myenv/conf/autokey/autokey.pid
+/.myenv/conf/autokey/autokey.json~
+/.myenv/conf/doublecmd/cmdhistory.txt
+/.myenv/conf/doublecmd/dirhistory.txt
+/.myenv/conf/doublecmd/searchhistory.txt
+/.myenv/conf/doublecmd/replacehistory.txt
+/.vim/.netrwhist
 /.myenv/.fl_files.txt
 /.myenv/.grep_result.txt
 /.myenv/gVim.exe.stackdump
 /.myenv/bash.exe.stackdump
-/.vim/.netrwhist
 /.vim/autoload/pathogen.vim
-/.myenv/zgen/
 
 # IGNORE, to deprecate
 /.myenv/gen_log/
