--- a/.gitignore
+++ b/.gitignore
@@ -50,12 +50,16 @@
 /.myenv/secure_*/
 
 # IGNORE, for those really not needed, or for secure reason
-*/.fl_files.txt
-*/.grep_result.txt
-*/.dl_me.txt
-*/.fl_me.txt
-*/.grep_me.txt
+.fl_files.txt
+.grep_result.txt
+.dl_me.txt
+.fl_me.txt
+.grep_me.txt
+bash.exe.stackdump
+gVim.exe.stackdump
 /.myenv/zgen/
+/.vim/.netrwhist
+/.vim/autoload/pathogen.vim
 /.myenv/conf/autokey/autokey.log
 /.myenv/conf/autokey/autokey.pid
 /.myenv/conf/autokey/autokey.json~
@@ -63,7 +67,3 @@
 /.myenv/conf/doublecmd/dirhistory.txt
 /.myenv/conf/doublecmd/searchhistory.txt
 /.myenv/conf/doublecmd/replacehistory.txt
-/.vim/.netrwhist
-/.myenv/gVim.exe.stackdump
-/.myenv/bash.exe.stackdump
-/.vim/autoload/pathogen.vim
