update tmux conf and env func

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,8 +30,19 @@ set -g mouse-select-pane on
 set -g mouse-select-window on
 
 ################################################################################
+# Candidates
+################################################################################
+set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
+
+# instructs tmux to expect UTF-8 sequences
+# setw -g utf8 on
+# set -g status-utf8 on
+
+################################################################################
 # Deprecated
 ################################################################################
 #unbind	%
 #bind	|	split-window -h
 #bind	-	split-window -v
+
+
