update mysql relate stuff

--- a/.myenv/conf/mysql/conf.global.5.5.28.cnf
+++ b/.myenv/conf/mysql/conf.global.5.5.28.cnf
@@ -1,3 +1,8 @@
+################################################################################
+# NOTE: based on the original version, updates:
+# 	1) add encoding related fields
+# 	2) listen to 0.0.0.0
+################################################################################
 #
 # The MySQL database server configuration file.
 #
