update doublecmd conf

--- a/.myenv/conf/doublecmd_lu/session.ini
+++ b/.myenv/conf/doublecmd_lu/session.ini
@@ -25,3 +25,21 @@ TfrmFileAssoc_Width=568
 TfrmFileAssoc_WindowState=wsNormal
 TfrmFileAssoc_Left=436
 TfrmFileAssoc_Top=157
+
+[TfrmOptions(1920x1080)]
+TfrmOptions_Height=846
+TfrmOptions_Width=1103
+TfrmOptions_WindowState=wsNormal
+TfrmOptions_Left=406
+TfrmOptions_Top=93
+
+[TfrmFileAssoc(1920x1080)]
+TfrmFileAssoc_Height=585
+TfrmFileAssoc_Width=568
+TfrmFileAssoc_WindowState=wsNormal
+TfrmFileAssoc_Left=674
+TfrmFileAssoc_Top=223
+
+[TfrmMain(1920x1080)]
+nbConsole_Height=54
+seLogWindow_Height=51
