--- a/.myenv/conf/doublecmd_win/session.ini
+++ b/.myenv/conf/doublecmd_win/session.ini
@@ -36,3 +36,14 @@ TfrmOptions_Width=517
 TfrmOptions_WindowState=wsNormal
 TfrmOptions_Left=701
 TfrmOptions_Top=338
+
+[TfrmOptions(1155x734)]
+TfrmOptions_Height=343
+TfrmOptions_Width=623
+TfrmOptions_WindowState=wsNormal
+TfrmOptions_Left=266
+TfrmOptions_Top=195
+
+[TfrmMain(1155x734)]
+nbConsole_Height=54
+seLogWindow_Height=51
