update doublecmd config

--- a/.myenv/conf/doublecmd_lu/session.ini
+++ b/.myenv/conf/doublecmd_lu/session.ini
@@ -30,8 +30,8 @@ TfrmFileAssoc_Top=157
 TfrmOptions_Height=846
 TfrmOptions_Width=1103
 TfrmOptions_WindowState=wsNormal
-TfrmOptions_Left=406
-TfrmOptions_Top=93
+TfrmOptions_Left=661
+TfrmOptions_Top=182
 
 [TfrmFileAssoc(1920x1080)]
 TfrmFileAssoc_Height=585
@@ -43,3 +43,20 @@ TfrmFileAssoc_Top=223
 [TfrmMain(1920x1080)]
 nbConsole_Height=54
 seLogWindow_Height=51
+
+[TfrmExtractDlg(1920x1080)]
+cbOverwrite_Checked=1
+
+[TfrmFindDlg(1920x1080)]
+TfrmFindDlg_Height=413
+TfrmFindDlg_Left=538
+TfrmFindDlg_Top=309
+TfrmFindDlg_Width=839
+TfrmFindDlg_WindowState=wsNormal
+
+[TfColumnsSetConf(1920x1080)]
+TfColumnsSetConf_Height=583
+TfColumnsSetConf_Width=900
+TfColumnsSetConf_WindowState=wsNormal
+TfColumnsSetConf_Left=508
+TfColumnsSetConf_Top=224
