--- a/.myenv/conf/terminator/config
+++ b/.myenv/conf/terminator/config
@@ -23,7 +23,7 @@
 [profiles]
   [[default]]
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
-    font = Monospace 10
+    font = Consolas 11
     background_image = None
     scrollback_lines = 5000
     use_system_font = False
