--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -1,16 +1,17 @@
-#"~/.myenv/conf/myahk/myahk_show_hide.sh A_A_NOTE_Copy.txt 'vi $MY_DOC/DCB/Record/Z/A_A_NOTE_Copy.txt'"
-"~/.myenv/conf/myahk/myahk_show_hide.sh allFile_All.txt 'vi $MY_DOC/DCB/Collection_Note/allFile_All.txt'"
+"~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Z/A_A_NOTE_Copy.txt"
   control+alt+c
 
-"~/.myenv/conf/myahk/myahk_show_hide.sh allFile_All.txt 'vi $MY_DOC/DCB/Collection_Note/allFile_All.txt'"
+"~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Collection_Note/allFile_All.txt"
   control+alt+a
 
-"~/.myenv/conf/myahk/myahk_show_hide.sh A_A_NOTE_Record.txt 'vi $MY_DOC/DCB/Google Drive/NOTE/A_A_NOTE_Record.txt'"
+"~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Google\ Drive/NOTE/A_A_NOTE_Record.txt"
   control+alt+q
 
-"~/.myenv/conf/myahk/myahk_show_hide.sh A_A_NOTE_Schedule.txt 'vi $MY_DOC/DCB/Google Drive/NOTE/A_A_NOTE_Schedule.txt'"
+"~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Google\ Drive/NOTE/A_A_NOTE_Schedule.txt"
   control+alt+z
 
+"xbindkeys_show"
+  control+alt+x
 
 # Examples
 # specify a mouse button
