--- a/.myenv/conf/xfce/applications/gvim.desktop
+++ b/.myenv/conf/xfce/applications/gvim.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Application
 Name=gvim
 Comment=gvim
-Exec=/home/ouyangzhu/program/vim/bin/gvim
+Exec=/home/ouyangzhu/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab 
 OnlyShowIn=XFCE;
 MimeType=text/plain;
 StartupNotify=false
