no show hide doc ahk in windows now

--- a/.myenv/conf/doublecmd_win/session.ini
+++ b/.myenv/conf/doublecmd_win/session.ini
@@ -47,3 +47,7 @@ TfrmOptions_Top=195
 [TfrmMain(1155x734)]
 nbConsole_Height=54
 seLogWindow_Height=51
+
+[TfrmMain(1920x984)]
+nbConsole_Height=54
+seLogWindow_Height=51
