add maven conf file

--- a/.myenv/conf/doublecmd_win/session.ini
+++ b/.myenv/conf/doublecmd_win/session.ini
@@ -51,3 +51,7 @@ seLogWindow_Height=51
 [TfrmMain(1920x984)]
 nbConsole_Height=54
 seLogWindow_Height=51
+
+[TfrmMain(1440x830)]
+nbConsole_Height=54
+seLogWindow_Height=51
