update graphite setting and logstash config

--- a/.myenv/conf/logstash/conf_shipper.conf
+++ b/.myenv/conf/logstash/conf_shipper.conf
@@ -1,10 +1,27 @@
 input {
-	stdin {
-		type => "example"
+	file {
+		path => '/tmp/rule.log'
+	}
+}
+
+filter {
+	grok {
+		match => [ "message", "%{IPORHOST:remote_addr} - %{USERNAME:remote_user} \[%{HTTPDATE:time_local}\] %{QS:request} %{INT:status} %{INT:body_bytes_sent} %{NUMBER:request_time} %{NUMBER:upstream_response_time} %{QS:http_x_forwarded_for} %{QS:http_referer} %{QS:http_user_agent}" ]
 	}
 }
 
 output {
-	stdout { }
-	redis { host => "127.0.0.1" data_type => "list" key => "logstash" }
+	stdout { debug => true codec => "json" }
+
+	#statsd { 
+	#	increment => "apache.response.%{status}" 
+	#}
+
+	graphite { 
+		host => "localhost" 
+		port => 2003
+		metrics => ["http.request_time", "%{request_time}"]   
+		#metrics => [logstash.events, 1, 'hosts.request_time', %{request_time}]
+		#"127.0.0.1" => 2003 "times" "%{request_time}", "%{upstream_response_time}", ] 
+	}
 }
