--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,2 +1,4 @@
 [global]
-index-url = http://pypi.yypm.com/simple/
+#index-url = http://pypi.yypm.com/simple/
+#index-url = http://e.pypi.python.org/simple
+index-url = http://pypi.douban.com/simple
