--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -3,16 +3,16 @@
 
 # NOTE: for path with space: "~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Google\ Drive/NOTE/A_A_NOTE_Record.txt"
 
-"~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_Copy.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
+"/home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_Copy.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
   control+alt+c
 
-"~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_TmpRecord.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
+"/home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_TmpRecord.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
   control+alt+q
 
-"~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection_note/collection_content.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
+"/home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection_note/collection_content.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
   control+alt+a
 
-"/usr/bin/wmctrl -a 'SINGLE_VIM' || ~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection_note/collection_content.txt"
+"/usr/bin/wmctrl -a 'SINGLE_VIM' || /home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection_note/collection_content.txt"
   control+alt+z
 
 "/usr/bin/wmctrl -a 'Google Chrome' || /usr/bin/google-chrome"
@@ -27,7 +27,7 @@
 "/usr/bin/wmctrl -a 'SINGLE_TERMINATOR' || /usr/bin/terminator --title SINGLE_TERMINATOR"
   control+alt+x
 
-"/usr/bin/wmctrl -a 'w7vm'"
+"/usr/bin/wmctrl -a 'workvmIII'"
   control+alt+w
 
 "~/.myenv/conf/myahk/myahk_script_hotstring.sh"
