--- a/.myenv/tool/doublecmd/conf/linux/session.ini
+++ b/.myenv/tool/doublecmd/conf/linux/session.ini
@@ -60,3 +60,7 @@ TfColumnsSetConf_Width=900
 TfColumnsSetConf_WindowState=wsNormal
 TfColumnsSetConf_Left=508
 TfColumnsSetConf_Top=224
+
+[TfrmMain(1366x768)]
+nbConsole_Height=54
+seLogWindow_Height=51
