--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -73,9 +73,9 @@
 # m:0x50 is "windows key" detect by "xbindkeys -k"
 # seems Super_R/Super_L works the same?
 #"/usr/bin/wmctrl -a 'File Manager' || exo-open --launch FileManager"	# version used in LinuxMint 15
-"xdg-open ~/amp/download/"
+"xdg-open ~/amp/download/ && wmctrl -a download"
   Mod2+Mod4+Super_R+e
-"xdg-open ~/amp/download/"
+"xdg-open ~/amp/download/ && wmctrl -a download"
   control+shift+alt+e
 
 # Examples
