--- a/.msmtprc
+++ b/.msmtprc
@@ -8,7 +8,8 @@ logfile ~/msmtp/msmtplog
 account myenv_notify
 host smtp.163.com
 from myenv_notify@163.com
-auth login
+# using "auth login" might cause error: "msmtp: GNU SASL: Base 64 coding error in SASL library"
+auth plain
 user myenv_notify@163.com
 password myenv_notify123
 account default : myenv_notify
