--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -3,16 +3,16 @@
 
 # NOTE: for path with space: "~/program/vim/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Google\ Drive/NOTE/A_A_NOTE_Record.txt"
 
-"/home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_Copy.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
+"LD_LIBRARY_PATH='' /home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_Copy.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
   control+alt+c
 
-"/home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_TmpRecord.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
+"LD_LIBRARY_PATH='' /home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/Documents/DCB/Record/Note/A_NOTE_TmpRecord.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
   control+alt+q
 
-"/home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection/all_content.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
+"LD_LIBRARY_PATH='' /home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection/all_content.txt && /usr/bin/wmctrl -a 'SINGLE_VIM'"
   control+alt+a
 
-"/usr/bin/wmctrl -a 'SINGLE_VIM' || /home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection/all_content.txt"
+"/usr/bin/wmctrl -a 'SINGLE_VIM' || LD_LIBRARY_PATH='' /home/ouyangzhu/.zbox/ins/vim/vim-hg-ouyzhu/bin/gvim --servername SINGLE_VIM --remote-tab ~/.myenv/zgen/collection/all_content.txt"
   control+alt+z
 
 "/usr/bin/wmctrl -a 'Google Chrome' || /usr/bin/google-chrome"
@@ -39,7 +39,11 @@
 # Problem: the notify-send can not show Body when copied multiple lines
 # TODO: seems GNOME notifications is better than Ubuntu NotifyOSD notification
 #"/usr/bin/xclip -o >> ~/Documents/DCB/Record/Z/A_A_NOTE_Copy.txt && notify-send -t 1000 'Copied to A_A_NOTE_Copy.txt' \"$(echo '$(/usr/bin/xclip -o)')\" "
-"target=~/Documents/DCB/Record/Note/A_NOTE_Copy.txt ; echo >> $target && /usr/bin/xclip -o >> $target && notify-send -t 1000 'Copied to A_A_NOTE_Copy.txt'"
+#"target=~/Documents/DCB/Record/Note/A_NOTE_Copy.txt ; echo >> $target && txt=$(/usr/bin/xclip -o) && echo $txt >> $target && (echo 0 ; sleep 1 ; echo 100) | zenity --progress --auto-close --title=Copied --text=\"$txt\""
+#'target=~/Documents/DCB/Record/Note/A_NOTE_Copy.txt ; echo >> $target && txt=$(/usr/bin/xclip -o) && echo $txt >> $target && (echo 0 ; sleep 1 ; echo 100) | zenity --progress --auto-close --title=Copied --text=\\'$txt\\''
+#"target=~/Documents/DCB/Record/Note/A_NOTE_Copy.txt ; echo >> $target && txt=$(/usr/bin/xclip -o) && showtxt=$(echo $txt | sed -e s/tr//) && echo $txt && echo $showtxt && echo $txt >> $target && zenity --info && sleep 0.5 && /usr/bin/wmctrl -a 'Information'"						# copy works, notification dialog created BUT not show (seems attached to the terminal window)
+#"target=~/Documents/DCB/Record/Note/A_NOTE_Copy.txt ; echo >> $target && txt=$(/usr/bin/xclip -o) && showtxt=$(echo $txt | sed -e s/tr//) && echo $txt && echo $showtxt && echo $txt >> $target && (echo 0 ; sleep 1 ; echo 100) | zenity --progress --auto-close --title=Copied --text=\"$showtxt\""		# copy works, notification NOT
+"target=~/Documents/DCB/Record/Note/A_NOTE_Copy.txt ; echo >> $target && /usr/bin/xclip -o >> $target && notify-send -t 1000 'Copied to A_A_NOTE_Copy.txt'"	# works for a long time, just the notify-send timeout option not works
   control+shift+c
 
 "/usr/bin/xfce4-screenshooter -r -c"
