--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,5 +1,5 @@
 [global]
 #index-url = http://pypi.yypm.com/simple/
 #index-url = http://e.pypi.python.org/simple
-index-url = http://pypi.douban.com/simple
+#index-url = http://pypi.douban.com/simple
 #index-url = http://pypi.yypm.com/simple/
